# pfs-fluxstd-lookup

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  launch_app.bash  pyproject.toml  utils.py
scripts/: launch_app.bash  postgres2duckdb.py
